# rule_90

./: pyproject.toml  run.bat  run.sh
.devcontainer/: devcontainer.json
src/: main.py
